--- a/top.html
+++ b/top.html
@@ -46,6 +46,13 @@
 		</nav>
 	</header>
 
+	<!-- モバイル専用ハンバーガーメニュー -->
+	<div class="mobile-menu-button" id="mobileMenuButton">
+		<span></span>
+		<span></span>
+		<span></span>
+	</div>
+
 	<div class="video-background">
 		<video autoplay muted loop playsinline>
 			<source src="video/令和ガールズ.mp4" type="video/mp4">
@@ -248,6 +255,7 @@
 	<!-- JSの読み込み（bodyの閉じタグ直前）-->
 	<script src="js/page-transition.js"></script>
 	<script src="js/header-basic.js"></script>
+	<script src="js/header-mobile.js"></script>
 	<script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
 	<script>
 		AOS.init({
