--- a/company.html
+++ b/company.html
@@ -26,6 +26,13 @@
 			<a href="contact.html">Contact</a>
 		</nav>
 	</header>
+
+	<!-- モバイル専用ハンバーガーメニュー -->
+	<div class="mobile-menu-button" id="mobileMenuButton">
+		<span></span>
+		<span></span>
+		<span></span>
+	</div>
 	<div class="video-background">
 		<video autoplay muted loop playsinline>
 			<source src="video/令和ガールズ.mp4" type="video/mp4">
@@ -270,6 +277,7 @@
 	<!-- AOSの読み込み -->
 	<link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
 	<script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+	<script src="js/header-mobile.js"></script>
 
 	<script>
 		AOS.init({
