--- a/recruit.html
+++ b/recruit.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Recruit Section</title>
 	<link rel="stylesheet" href="css/recruit.css">
 	<link rel="stylesheet" href="css/footer.css">
@@ -25,6 +26,13 @@
 			<a href="contact.html">Contact</a>
 		</nav>
 	</header>
+
+	<!-- モバイル専用ハンバーガーメニュー -->
+	<div class="mobile-menu-button" id="mobileMenuButton">
+		<span></span>
+		<span></span>
+		<span></span>
+	</div>
 	<div class="video-background">
 		<video autoplay muted loop playsinline>
 			<source src="video/令和ガールズ.mp4" type="video/mp4">
@@ -233,6 +241,7 @@
 
 	<!-- JSの読み込み（bodyの閉じタグ直前）-->
 	<script src="js/page-transition.js"></script>
+	<script src="js/header-mobile.js"></script>
 </body>
 
 </html>
