--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
 			<div class="text-block">
 				<h2><span class="highlight_dream" data-aos="fade-up">夢</span>で終わらせない</h2>
-				<p data-aos="fade-left" data-aos-delay="300" data-aos-duration="1000">
+				<p class="intro-text__description" data-aos="fade-left" data-aos-delay="300" data-aos-duration="1000">
 					人気になりたい、夢を叶えたい、<br>
 					楽しいことをしたい...<br>
 					そんな人を一人一人の夢を開花させる<br>
