--- a/service.html
+++ b/service.html
@@ -27,12 +27,23 @@
 		</nav>
 	</header>
 
-	<!-- モバイル専用ハンバーガーメニュー -->
+	<!-- モバイルメニューボタンとオーバーレイはここ！ -->
 	<div class="mobile-menu-button" id="mobileMenuButton">
 		<span></span>
 		<span></span>
 		<span></span>
 	</div>
+
+	<div class="mobile-menu-overlay" id="mobileMenuOverlay">
+		<nav class="mobile-menu-nav">
+			<a href="service.html">Service</a>
+			<a href="company.html">Company</a>
+			<a href="top.html">Vision</a>
+			<a href="recruit.html">Recruit</a>
+			<a href="contact.html">Contact</a>
+		</nav>
+	</div>
+	
 	<div class="video-background">
 		<video autoplay muted loop playsinline>
 			<source src="video/令和ガールズ.mp4" type="video/mp4">
@@ -119,7 +130,8 @@
 					<p class="card-grid__catchcopy">美容識をまとう<br>選ばれるブランドへ</p>
 					<p class="card-grid__text">感性に寄り添った世界観とファッションブランドを軸にトータルプロデュースします。</p>
 					<div class="detail-button__container">
-						<a class="service-detail__button" href="https://prtimes.jp/main/html/rd/p/000000001.000109231.html">記事はこちら</a>
+						<a class="service-detail__button"
+							href="https://prtimes.jp/main/html/rd/p/000000001.000109231.html">記事はこちら</a>
 						<a id="openModal" class="service-detail__button">詳細はこちら</a>
 					</div>
 
