リクルートページレスポンシブ化

--- a/top.html
+++ b/top.html
@@ -45,12 +45,22 @@
 			<a href="contact.html">Contact</a>
 		</nav>
 	</header>
-
-	<!-- モバイル専用ハンバーガーメニュー -->
+	
+	<!-- モバイルメニューボタンとオーバーレイはここ！ -->
 	<div class="mobile-menu-button" id="mobileMenuButton">
 		<span></span>
 		<span></span>
 		<span></span>
+	</div>
+
+	<div class="mobile-menu-overlay" id="mobileMenuOverlay">
+		<nav class="mobile-menu-nav">
+			<a href="service.html">Service</a>
+			<a href="company.html">Company</a>
+			<a href="top.html">Vision</a>
+			<a href="recruit.html">Recruit</a>
+			<a href="contact.html">Contact</a>
+		</nav>
 	</div>
 
 	<div class="video-background">
