--- a/recruit.html
+++ b/recruit.html
@@ -27,12 +27,23 @@
 		</nav>
 	</header>
 
-	<!-- モバイル専用ハンバーガーメニュー -->
+	<!-- モバイルメニューボタンとオーバーレイはここ！ -->
 	<div class="mobile-menu-button" id="mobileMenuButton">
 		<span></span>
 		<span></span>
 		<span></span>
 	</div>
+
+	<div class="mobile-menu-overlay" id="mobileMenuOverlay">
+		<nav class="mobile-menu-nav">
+			<a href="service.html">Service</a>
+			<a href="company.html">Company</a>
+			<a href="top.html">Vision</a>
+			<a href="recruit.html">Recruit</a>
+			<a href="contact.html">Contact</a>
+		</nav>
+	</div>
+
 	<div class="video-background">
 		<video autoplay muted loop playsinline>
 			<source src="video/令和ガールズ.mp4" type="video/mp4">
@@ -124,7 +135,7 @@
 		</div>
 
 		<div class="recruit-second-title">
-			<h2 class="recruit-second-title-title">WORKING ENVIRONMENT</h2>
+			<h2 class="recruit-second-title-title">WORK ENVIRONMENT</h2>
 			<P class="recruit-second-title-text">仕事環境</P>
 		</div>
 
