画像軽量化/会社情報修正

--- a/contact.html
+++ b/contact.html
@@ -88,18 +88,42 @@
 				</div>
 
 				<div class="company-overview-row">
-					<div class="company-overview-label">資本金</div>
-					<div class="company-overview-content">1000万円</div>
-				</div>
-
-				<div class="company-overview-row">
-					<div class="company-overview-label">代表者</div>
+					<div class="company-overview-label">代表取締役</div>
 					<div class="company-overview-content">室井涼介</div>
 				</div>
 
 				<div class="company-overview-row">
 					<div class="company-overview-label">所在地</div>
-					<div class="company-overview-content">東京都港区麻布〇〇丁目〇〇番〇〇号</div>
+					<div class="company-overview-content">
+						本社<br>
+						〒160-0023<br>
+						東京都新宿区西新宿8丁目14番19号 小林第二ビル8階
+					</div>
+				</div>
+
+				<div class="company-overview-row">
+					<div class="company-overview-label">電話番号</div>
+					<div class="company-overview-content">03-6824-2081</div>
+				</div>
+
+				<div class="company-overview-row">
+					<div class="company-overview-label">顧問社労士事務所</div>
+					<div class="company-overview-content">行政書士法人フラット法務事務所</div>
+				</div>
+
+				<div class="company-overview-row">
+					<div class="company-overview-label">主要取引銀行</div>
+					<div class="company-overview-content">三井住友銀行 新宿西口支店</div>
+				</div>
+
+				<div class="company-overview-row">
+					<div class="company-overview-label">資本金</div>
+					<div class="company-overview-content">4,000,000円</div>
+				</div>
+
+				<div class="company-overview-row">
+					<div class="company-overview-label">設立</div>
+					<div class="company-overview-content">2022年6月7日</div>
 				</div>
 
 				<div class="company-overview-row">
@@ -114,22 +138,13 @@
 				</div>
 
 				<div class="company-overview-row">
-					<div class="company-overview-label">設立</div>
-					<div class="company-overview-content">2024年4月1日</div>
-				</div>
-
-				<div class="company-overview-row">
-					<div class="company-overview-label">主要取引先</div>
-					<div class="company-overview-content">株式会社○○ 他</div>
-				</div>
-
-				<div class="company-overview-row">
 					<div class="company-overview-label">お問い合わせ</div>
-					<div class="company-overview-content">info@example.com</div>
+					<div class="company-overview-content">info@reiwagirls.co.jp</div>
 				</div>
 			</div>
 		</div>
 	</section>
+
 
 	<footer class="footer-section theme-white-text" id="section-footer">
 		<div class="footer-inner">
@@ -174,20 +189,21 @@
 
 			<div class="footer-bottom-area theme-dark">
 				<div class="footer-nav">
-					<a href="#schedule">Company</a>
-					<a href="#about">Contact</a>
-					<a href="#company">Line</a>
-					<a href="#company">Instagram</a>
+					<a href="index.html">Top</a>
+					<a href="contact.html">Contact</a>
+					<a href="#">Line</a>
+					<a href="#">Instagram</a>
 				</div>
 
 				<div class="footer-address">
-					<p>REIWAGIRLS Inc.<br>3-21-8, AzabuJuban, Minato-ku, Tokyo, 150-0001</p>
+					<p>REIWAGIRLS Inc.<br>〒160-0023<br>東京都新宿区西新宿8丁目14番19号 小林第二ビル8階</p>
 				</div>
 
 				<div class="footer-bottom">
-					<small>© REIWAGIRLS / NEXTSTARS</small>
+					<small>© REIWAGIRLS</small>
 				</div>
 			</div>
+
 		</div>
 	</footer>
 
