--- a/company.html
+++ b/company.html
@@ -43,7 +43,7 @@
 			<a href="contact.html">Contact</a>
 		</nav>
 	</div>
-	
+
 	<div class="video-background">
 		<video autoplay muted loop playsinline>
 			<source src="video/令和ガールズ.mp4" type="video/mp4">
@@ -157,7 +157,6 @@
 			</div>
 		</section>
 
-
 		<section class="company-overview-section">
 			<div class="company-overview-bg"></div>
 
@@ -171,19 +170,42 @@
 					</div>
 
 					<div class="company-overview-row">
-						<div class="company-overview-label">資本金</div>
-						<div class="company-overview-content">400万円</div>
-					</div>
-
-					<div class="company-overview-row">
-						<div class="company-overview-label">代表者</div>
+						<div class="company-overview-label">代表取締役</div>
 						<div class="company-overview-content">室井涼介</div>
 					</div>
 
 					<div class="company-overview-row">
 						<div class="company-overview-label">所在地</div>
-						<div class="company-overview-content">〒1600023 <br>東京都新宿区西新宿８丁目１４番１９号小林第二ビル８階
-							​</div>
+						<div class="company-overview-content">
+							本社<br>
+							〒160-0023<br>
+							東京都新宿区西新宿8丁目14番19号 小林第二ビル8階
+						</div>
+					</div>
+
+					<div class="company-overview-row">
+						<div class="company-overview-label">電話番号</div>
+						<div class="company-overview-content">03-6824-2081</div>
+					</div>
+
+					<div class="company-overview-row">
+						<div class="company-overview-label">顧問社労士事務所</div>
+						<div class="company-overview-content">行政書士法人フラット法務事務所</div>
+					</div>
+
+					<div class="company-overview-row">
+						<div class="company-overview-label">主要取引銀行</div>
+						<div class="company-overview-content">三井住友銀行 新宿西口支店</div>
+					</div>
+
+					<div class="company-overview-row">
+						<div class="company-overview-label">資本金</div>
+						<div class="company-overview-content">4,000,000円</div>
+					</div>
+
+					<div class="company-overview-row">
+						<div class="company-overview-label">設立</div>
+						<div class="company-overview-content">2022年6月7日</div>
 					</div>
 
 					<div class="company-overview-row">
@@ -198,22 +220,13 @@
 					</div>
 
 					<div class="company-overview-row">
-						<div class="company-overview-label">設立</div>
-						<div class="company-overview-content">2022年6月7日</div>
-					</div>
-
-					<div class="company-overview-row">
-						<div class="company-overview-label">主要取引先</div>
-						<div class="company-overview-content">株式会社 M&Iホールディングス</div>
-					</div>
-
-					<div class="company-overview-row">
 						<div class="company-overview-label">お問い合わせ</div>
 						<div class="company-overview-content">info@reiwagirls.co.jp</div>
 					</div>
 				</div>
 			</div>
 		</section>
+
 
 
 	</main>
@@ -260,20 +273,21 @@
 
 			<div class="footer-bottom-area theme-dark">
 				<div class="footer-nav">
-					<a href="#schedule">Company</a>
-					<a href="#about">Contact</a>
-					<a href="#company">Line</a>
-					<a href="#company">Instagram</a>
+					<a href="index.html">Top</a>
+					<a href="contact.html">Contact</a>
+					<a href="#">Line</a>
+					<a href="#">Instagram</a>
 				</div>
 
 				<div class="footer-address">
-					<p>REIWAGIRLS Inc.<br>3-21-8, AzabuJuban, Minato-ku, Tokyo, 150-0001</p>
+					<p>REIWAGIRLS Inc.<br>〒160-0023<br>東京都新宿区西新宿8丁目14番19号 小林第二ビル8階</p>
 				</div>
 
 				<div class="footer-bottom">
-					<small>© REIWAGIRLS / NEXTSTARS</small>
+					<small>© REIWAGIRLS</small>
 				</div>
 			</div>
+
 		</div>
 	</footer>
 
@@ -292,9 +306,11 @@
 
 	<script>
 		AOS.init({
-			duration: 1000,  // アニメーションの長さ（ミリ秒）
-			once: true,      // 一度だけアニメーション
-			easing: 'ease-in-out' // イージング
+			disable: function () {
+				return window.innerWidth < 768;
+			},
+			once: true, // 1回だけ実行（オプションだけど効果的）
+			duration: 800
 		});
 	</script>
 
