--- a/index.html
+++ b/index.html
@@ -91,6 +91,12 @@
 					<img src="img/1-1.png">
 					<img src="img/1-2.png">
 					<img src="img/1-3.png">
+					<img src="img/1-1.png">
+					<img src="img/1-2.png">
+					<img src="img/1-3.png">
+					<img src="img/1-1.png">
+					<img src="img/1-2.png">
+					<img src="img/1-3.png">
 				</div>
 			</div>
 			<div class="column" id="col2">
@@ -101,10 +107,24 @@
 					<img src="img/2-1.png">
 					<img src="img/2-2.png">
 					<img src="img/3-3.png">
+					<img src="img/2-1.png">
+					<img src="img/2-2.png">
+					<img src="img/3-3.png">
+					<img src="img/2-1.png">
+					<img src="img/2-2.png">
+					<img src="img/3-3.png">
 				</div>
 			</div>
 			<div class="column" id="col3">
 				<div class="inner inner3">
+					<img src="img/3-1.png">
+					<img src="img/3-2.png">
+					<img src="img/2-3.png">
+					<img src="img/3-4.png">
+					<img src="img/3-1.png">
+					<img src="img/3-2.png">
+					<img src="img/2-3.png">
+					<img src="img/3-4.png">
 					<img src="img/3-1.png">
 					<img src="img/3-2.png">
 					<img src="img/2-3.png">
@@ -381,18 +401,18 @@
 
 			<div class="footer-bottom-area theme-dark">
 				<div class="footer-nav">
-					<a href="#schedule">Company</a>
-					<a href="#about">Contact</a>
-					<a href="#company">Line</a>
-					<a href="#company">Instagram</a>
+					<a href="index.html">Top</a>
+					<a href="contact.html">Contact</a>
+					<a href="#">Line</a>
+					<a href="#">Instagram</a>
 				</div>
 
 				<div class="footer-address">
-					<p>REIWAGIRLS Inc.<br>3-21-8, AzabuJuban, Minato-ku, Tokyo, 150-0001</p>
+					<p>REIWAGIRLS Inc.<br>〒160-0023<br>東京都新宿区西新宿8丁目14番19号 小林第二ビル8階</p>
 				</div>
 
 				<div class="footer-bottom">
-					<small>© REIWAGIRLS / NEXTSTARS</small>
+					<small>© REIWAGIRLS</small>
 				</div>
 			</div>
 		</div>
