--- a/service.html
+++ b/service.html
@@ -43,7 +43,7 @@
 			<a href="contact.html">Contact</a>
 		</nav>
 	</div>
-	
+
 	<div class="video-background">
 		<video autoplay muted loop playsinline>
 			<source src="video/令和ガールズ.mp4" type="video/mp4">
@@ -467,20 +467,21 @@
 
 			<div class="footer-bottom-area theme-dark">
 				<div class="footer-nav">
-					<a href="#schedule">Company</a>
-					<a href="#about">Contact</a>
-					<a href="#company">Line</a>
-					<a href="#company">Instagram</a>
+					<a href="index.html">Top</a>
+					<a href="contact.html">Contact</a>
+					<a href="#">Line</a>
+					<a href="#">Instagram</a>
 				</div>
 
 				<div class="footer-address">
-					<p>REIWAGIRLS Inc.<br>3-21-8, AzabuJuban, Minato-ku, Tokyo, 150-0001</p>
+					<p>REIWAGIRLS Inc.<br>〒160-0023<br>東京都新宿区西新宿8丁目14番19号 小林第二ビル8階</p>
 				</div>
 
 				<div class="footer-bottom">
-					<small>© REIWAGIRLS / NEXTSTARS</small>
+					<small>© REIWAGIRLS</small>
 				</div>
 			</div>
+
 		</div>
 	</footer>
 
